implement db access

--- a/wechat/build.gradle
+++ b/wechat/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-cache')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1")
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
