--- a/wechat/src/main/resources/application.properties
+++ b/wechat/src/main/resources/application.properties
@@ -1,6 +1,23 @@
 #spring.profiles.active=prd
 app.gen=123321
 
+spring.datasource.url = jdbc:mysql://10.18.19.43:3307/loan_quota
+spring.datasource.username = loanquota
+spring.datasource.password = loanquota_uc!
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+
+#datasource.mysql.url=jdbc:mysql://10.18.19.43:3307/loan_quota
+#datasource.mysql.username=loanquota
+#datasource.mysql.password=loanquota_uc!
+#datasource.mysql.driverClassName=com.mysql.jdbc.Driver
+#datasource.mysql.initialSize=5
+#datasource.mysql.maxActive=50
+#datasource.mysql.maxWait=-1
+#datasource.mysql.minIdle=5
+#datasource.mysql.validationQuery=select 1 from DUAL
+
+
 wechat.app.appId=wxbc3511a60aa9362a
 wechat.app.appSecret=3068b0efa60dcd23efaee6c92bd63064
 wechat.app.appToken=sgwcmxjh
