--- a/wechat/src/main/resources/application.properties
+++ b/wechat/src/main/resources/application.properties
@@ -7,22 +7,15 @@ spring.datasource.password = loanquota_uc!
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 
-#datasource.mysql.url=jdbc:mysql://10.18.19.43:3307/loan_quota
-#datasource.mysql.username=loanquota
-#datasource.mysql.password=loanquota_uc!
-#datasource.mysql.driverClassName=com.mysql.jdbc.Driver
-#datasource.mysql.initialSize=5
-#datasource.mysql.maxActive=50
-#datasource.mysql.maxWait=-1
-#datasource.mysql.minIdle=5
-#datasource.mysql.validationQuery=select 1 from DUAL
-
-
-wechat.app.appId=wxbc3511a60aa9362a
-wechat.app.appSecret=3068b0efa60dcd23efaee6c92bd63064
-wechat.app.appToken=sgwcmxjh
-
+wechat.app.appId=wxdd7c381794777c14
+wechat.app.appSecret=95c0f94d1f11a6388a3e6458c4f113e9
+wechat.app.appToken=yxswechat
+wechat.app.reminderurl=http%3a%2f%2f114.55.253.30%2fpages%2fdashboard%2findex.html
+wechat.app.template.reminder.id=2HJaaQ992ThdyNDtlhCC1WAqf-mMKlgi9PfdNBL-qX4
 
 
 
 wechat.getAccessToken.url=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=%s&secret=%s
+wechat.getPageAccessToken.url=https://api.weixin.qq.com/sns/oauth2/access_token?appid=%s&secret=%s&code=%s&grant_type=authorization_code
+wechat.getPageRedirect.url=https://open.weixin.qq.com/connect/oauth2/authorize?appid=%s&redirect_uri=%s&response_type=code&scope=%s&state=%s#wechat_redirect
+wechat.sendTemplate.url=https://api.weixin.qq.com/cgi-bin/message/template/send?access_token=%s
