--- a/wechat/src/main/resources/application-prd.properties
+++ b/wechat/src/main/resources/application-prd.properties
@@ -2,3 +2,10 @@ server.port=80
 
 
 
+spring.datasource.url = jdbc:mysql://localhost:3306/wechat?useUnicode=true&characterEncoding=utf8
+spring.datasource.username = root
+spring.datasource.password = qazWSX354!@#
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+
+
